<resources>
    <string name="app_name">KastenDerPandora</string>
    
    <!-- Common -->
    <string name="settings">Einstellungen</string>
    <string name="plugins">Extras</string>
    <string name="back">Zurück</string>

    <!-- Tools -->
    <string name="light">Lampe</string>
    <string name="ruler">Lineal</string>
    <string name="counter">Zähler</string>
    <string name="clock">Uhr</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_add">Alarm hinzufügen</string>
    <string name="alarm_delete">Alarm löschen</string>
    <string name="stopwatch">Stoppuhr</string>
    <string name="timer">Timer</string>
    <string name="timer_set_time">Zeit einstellen</string>
    <string name="no_alarms_set">Keine Wecker eingestellt</string>
    <string name="start">Start</string>
    <string name="stopwatch_stop">Stop</string>
    <string name="default_time">00:00:00</string>
    <string name="calculator">Rechner</string>
    <string name="protractor">Winkelmesser</string>
    <string name="spirit_level">Wasserwaage</string>
    <string name="decibel_meter">Dezibelmesser</string>
    <string name="compass">Kompas</string> <!-- mitunter gps/karte? -->
    <string name="siren">Sirene</string>
    <string name="magnifying_glass">Lupe</string>
    <string name="voice_recorder">Sprachaufnahme</string>
    <string name="lumen_meter">Lumenmesser</string>
    <string name="camera">Kamera</string>
    <string name="audio_spectrum">Audiospektrum</string>

    <!-- Light Tool -->
    <string name="light_turn_on">Einschalten</string>
    <string name="light_turn_off">Ausschalten</string>

    <!-- Siren Tool -->
    <string name="siren_start">Siren starten</string>
    <string name="siren_stop">Siren stoppen</string>
    <string name="siren_status_off">Siren aus</string>
    <string name="siren_status_on">Siren an</string>
    <string name="siren_pattern">Muster</string>
    <string name="siren_pattern_loud">Lauter Ton</string>
    <string name="siren_pattern_sos">SOS</string>
    <string name="siren_volume">Lautstärke</string>
    <string name="siren_frequency">Frequenz</string>
    <string name="siren_volume_value">%1$d%%</string>
    <string name="siren_frequency_value">%1$d Hz</string>

    <!-- Decibel Meter -->
    <string name="db_initial">0 dB</string>
    <string name="db_current">%1$d dB</string>

    <string name="db_range_1">Leise Umgebung (000 – 045 dB)</string>
    <string name="db_range_2">Zimmerlautstärke (045 – 060 dB)</string>
    <string name="db_range_3">Lauter Arbeitsplatz (060 – 080 dB)</string>
    <string name="db_range_4">Gefährliche Lautstärke (080 – 115 dB)</string>
    <string name="db_range_5">Extrem gefährliche Lautstärke (115 – 140 dB)</string>

    <string name="db_stats">
        db_min: %1$d dB\n
        db_max: %2$d dB\n
        avg (10s): %3$d dB
    </string>

    <!-- Counter -->
    <string name="reset">Zurücksetzen</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>

    <!-- Spirit Level-->
    <string name="level_status_flat">Waagerecht</string>
    <string name="level_angle_label">%1$d°</string>

    <!-- Settings -->
    <string name="settings_language">Sprache</string>
    <string name="settings_darkmode">Dunkler Modus</string>
    <string name="settings_home_grid_columns">Raster-Spalten</string>
    <string name="settings_theme">Design</string>
    <string name="settings_save">Speichern</string>
    
    <!-- Placeholders -->
    <string name="tool_name">Tool</string>
    
    <!-- Plurals -->
    <plurals name="tools_available">
        <item quantity="one">%d Werkzeug verfügbar</item>
        <item quantity="other">%d Werkzeuge verfügbar</item>
    </plurals>
</resources>
