<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCurrentDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_initial"
        android:textSize="72sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/rangeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentDb"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_range_1"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_range_2"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_range_3"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvRange4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_range_4"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvRange5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/db_range_5"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/rangeContainer"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
